# os-env-traits

./: Cargo.toml  README.md  package.json
crates/env-fake/: Cargo.toml
crates/env-fake/src/: error.rs  fake_ai.rs  fake_file.rs  fake_git.rs  fake_github.rs  fake_network.rs  lib.rs
crates/env-real/: Cargo.toml
crates/env-real/src/: error.rs  gh_cli_github.rs  lib.rs  os_file.rs  process_git.rs  reqwest_network.rs
crates/env-traits/: Cargo.toml
crates/env-traits/src/: async_.rs  awaiter_bridge.rs  copy_ext.rs  lib.rs
crates/ftree/: Cargo.toml
crates/ftree/src/: env.rs  error.rs  lib.rs  read.rs  tree.rs
