[package]
name        = "env-traits"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Pluggable OS-level environment trait definitions: FileEnv, GitEnv, GitHubEnv, NetworkEnv, AiEnv"

[dependencies]
embedded-io = { workspace = true }
