[package]
name = "ftree"
edition = "2024"
version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
serde      = { workspace = true, optional = true, features = ["alloc"] }
env-traits = { workspace = true, optional = true }

[features]
serde = ["dep:serde"]
std   = ["dep:env-traits"]